Work in progress
Work in progress

--- a/gesevent/templates/base.html
+++ b/gesevent/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Gesevent | {% block title %}Inicio{% endblock %}</title>
+  <title>Gesevent</title>
 </head>
 <body>
   <div id="header">
-    <h1>Gesevent</h1>
+    <h1>Gesevent - {% block title %}Inicio{% endblock %}</h1>
   </div>
   <div id="content">
     {% block content %}{% endblock %}
