Add div results for Tematica
Add div with the view of the tematica that it has been created.

--- a/gesevent/templates/gesevent/tematica_crear.html
+++ b/gesevent/templates/gesevent/tematica_crear.html
@@ -5,4 +5,9 @@
     {{ form.as_p }}
     <input type="submit" value="Enviar"/>
   </form>
+  <div id="tematica_results">
+      {% for res in tematica_res %}
+        {{ res.desc_tematica }}</br>
+      {% endfor %}
+  </div>
 {% endblock %}
