--- a/gesevent/templates/base.html
+++ b/gesevent/templates/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,7 +6,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>Gesevent - {% block title %}Inicio{% endblock %}</h1>
+    <h1>Gesevent - {% block title %}{% trans "Inicio" %}{% endblock %}</h1>
   </div>
   <div id="content">
     {% block content %}{% endblock %}
