--- a/gesevent/templates/base.html
+++ b/gesevent/templates/base.html
@@ -2,14 +2,56 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <!-- TODO: Crear favicon -->
+  <link rel="icon" href="../../favicon.ico">
+
   <title>Gesevent</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="/static/css/bootstrap.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="/static/css/starter-template.css" rel="stylesheet">
+
 </head>
 <body>
-  <div id="header">
-    <h1>Gesevent - {% block title %}{% trans "Inicio" %}{% endblock %}</h1>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Gesevent</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Inicio</a></li>
+          <li><a href="#about">Menu1</a></li>
+          <li><a href="#contact">Menu2</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </nav>
+  <div class="container">
+    <div class="starter-template">
+      <h1>{% block title %}{% trans "Inicio" %}{% endblock%}</h1>
+      <p class="lead">
+        Dar de alta una temática
+      </p>
+      {% block content %}{% endblock %}
+    </div>
+
+
+
   </div>
-  <div id="content">
-    {% block content %}{% endblock %}
-  </div>
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <!-- TODO: Descargar jquery -->
+  <script src="/static/js/jquery-1.11.3.js"></script>
+  <script src="/static/js/bootstrap.js"></script>
 </body>
 </html>
